fix: Fix wrong display of contents of swagger document.
